syntax = "proto3";

package hyeonjae.guestbook.v1;

option go_package = "api/v1";
option java_multiple_files = true;
option java_outer_classname = "GuestbookProto";
option java_package = "com.hyeonjae.guestbook.v1";

service Guestbook {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc List (ListRequest) returns (ListResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
}

message CreateRequest {
}

message CreateResponse {
}

message ListRequest {
}

message ListResponse {
}

message GetRequest {
}

message GetResponse {
}
